# MEATWORLD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  build.sh  buildnc.sh
IDKGame/src/ComponentSystems/: CMakeLists.txt  IDK_builtin_CS_common.h  IDKcomponentsystems.h  IDKcomponentsystems.hpp  camera_cs.cpp  camera_cs.hpp  character_cs.cpp  character_cs.hpp  componentsystems.hpp  idk_camera_CS.cpp  idk_camera_CS.h  idk_grabbable.cpp  idk_grabbable.h  idk_model_CS.cpp  idk_model_CS.h  idk_model_CS.hpp  idk_transform_CS.cpp  idk_transform_CS.h  physicsbody_cs.cpp  physicsbody_cs.hpp
IDKGame/src/ComponentSystems/hands_opencv/: CMakeLists.txt  hands_opencv.cpp  hands_opencv.hpp
IDKGame/src/ComponentSystems/idk_character_controller_CS/: charactercontroller.cpp  charactercontroller.h  controlmethods.cpp  controlmethods.h  idk_character_controller.cpp  idk_character_controller.h
IDKGame/src/ComponentSystems/idk_lightsource_CS/: idk_pointlight_CS.cpp  idk_pointlight_CS.h  idk_spotlight_CS.cpp  idk_spotlight_CS.h
IDKGame/src/ComponentSystems/idk_physics_CS/: CMakeLists.txt  idk_physics_CS.h  meshcollider.cpp  meshcollider.h
IDKGame/src/ComponentSystems/idk_prefab/: idk_prefab.cpp  idk_prefab.h
IDKGame/src/ComponentSystems/playercontroller_cs/: characteranimator.hpp  charactercontroller_cs.cpp  charactercontroller_cs.hpp  playercontroller.cpp  playercontroller.hpp  playercontroller_cs.cpp  playercontroller_cs.hpp
IDKGame/src/ComponentSystems/terrain_cs/: terrain_cs.cpp  terrain_cs.hpp
IDKGame/src/Modules/: CMakeLists.txt  idk_modules.hpp
IDKGame/src/Modules/EditorUI/: idk_EditorUI.cpp  idk_EditorUI.hpp  idk_imgui-old.cpp
IDKGame/src/Modules/imgui/: idk_imgui.cpp  idk_imgui.hpp  idk_imgui_extra.cpp  idk_imgui_extra.hpp
IDKGame/src/Modules/voxel/: idk_svoctree.hpp  idk_voxel.cpp  idk_voxel.hpp
IDKGame/src/modules/: CMakeLists.txt  idk_modules.h
IDKGame/src/modules/imgui/: idk_imgui.cpp  idk_imgui.h
IDKGame/src/modules/voxel/: idk_svoctree.cpp  idk_svoctree.hpp  idk_voxel.cpp  idk_voxel.hpp
meatnet/: CMakeLists.txt
meatnet/src/: main.cpp  meatnet.cpp  meatnet.hpp  meatnet_client.cpp  meatnet_server.cpp  net-ecs.cpp  net-ecs.hpp
meatworldgame/: CMakeLists.txt
meatworldgame/assets-dev/: chair.gltf  plastic_monobloc_chair_01_1k.blend
meatworldgame/assets-dev/textures/: plastic_monobloc_chair_01_metal_1k.exr  plastic_monobloc_chair_01_nor_gl_1k.exr  plastic_monobloc_chair_01_rough_1k.exr
meatworldgame/src/: game.hpp  gamedata.cpp  gamedata.hpp  main.cpp  world.cpp  world.hpp
meatworldgame/src/behaviour/: behaviour.cpp  behaviour.hpp
meatworldgame/src/character/: base.cpp  base.hpp  behaviour.cpp  behaviour.hpp  character.cpp  character.hpp  character.inl  dialogue.hpp  humanoid.cpp  humanoid.hpp  limb.cpp  limb.hpp  manager.hpp  player.cpp  player.hpp  proc-arm.cpp  weapon.cpp  weapon.hpp
meatworldgame/src/environment/: baby.hpp  environment.hpp
meatworldgame/src/item/: flashlight.cpp  flashlight.hpp  gyro.cpp  gyro.hpp  health.hpp  inventory.cpp  inventory.hpp  sensor.hpp  sonar.cpp  sonar.hpp  thruster.cpp  thruster.hpp
meatworldgame/src/menu/: menu.cpp  menu.hpp
meatworldgame/src/npc/: drone.cpp  drone.hpp  humanoid.cpp  humanoid.hpp  turret.cpp  turret.hpp
meatworldgame/src/old/behaviour/: behaviour.hpp
meatworldgame/src/old/character/: animation.cpp  animation.hpp  character.hpp  humanoid.cpp  humanoid.hpp  limb.cpp  proc-arm.cpp  proc-arm.hpp  weapon.cpp  weapon.hpp  weapon_desc.cpp
meatworldgame/src/old/npc/: npc.cpp  npc.hpp
meatworldgame/src/old/player/: flashlight.hpp  ol_player.cpp  ol_player.hpp  player-controller.hpp  player-fps.cpp  player-fps.hpp  player.cpp  player.hpp
meatworldgame/src/old/prefabs/: pickup.cpp  prefabs.cpp
meatworldgame/src/old/ui/: ingame.cpp  mainmenu.cpp  menu.cpp  multiplayer.cpp  settings.cpp  syndromes.cpp  ui.hpp
meatworldgame/src/physics/: rigidbody.cpp  rigidbody.hpp
meatworldgame/src/player/: flashlight.cpp  ol_player.cpp  ol_player.hpp  player-controller.hpp  player-fps.cpp  player-fps.hpp  player-tps.cpp  player-tps.hpp  player.cpp  player.hpp  weapon.cpp  weapon.hpp  weapon_desc.cpp
meatworldgame/src/prefabs/: door.cpp  pickup.cpp  prefabs.cpp  prefabs.hpp
meatworldgame/src/scene/: scene.hpp
meatworldgame/src/shaders/: SVOctree.fs  gpass-grass.fs  gpass-grass.vs  gpass-planet.fs  gpass-planet.vs  terrain-gpass.fs  terrain-gpass.vs  terrain-shadow.fs  terrain-shadow.vs  terrain.fs  terrain.vs  voxelize.vs  wall.fs  wall.vs
meatworldgame/src/shaders/include/: SSBO_indirect.glsl  UBOs.glsl  bindings.glsl  gbuffer.glsl  noise.glsl  pbr.glsl  rotate.glsl  shadow.glsl  storage.glsl  taa.glsl  time.glsl  triplanar.glsl  util.glsl  volumetric.glsl
meatworldgame/src/state/: state.hpp
meatworldgame/src/systems/: draw.cpp  draw.hpp  sys-actor.hpp  sys-building.cpp  sys-building.hpp  sys-grabbable.cpp  sys-grabbable.hpp  sys-player.cpp  sys-player.hpp  sys-projectile.cpp  sys-projectile.hpp  sys-tileable.cpp  sys-tileable.hpp  sys-vehicle.hpp  sys-weapon.cpp  sys-weapon.hpp
meatworldgame/src/ui/: mainmenu.cpp  menu.cpp  multiplayer.cpp  settings.cpp  syndromes.cpp  ui.hpp
meatworldgame/src/vehicle/: vehicle.cpp  vehicle.hpp
meatworldgame/src/weapon/: physgun.cpp  physgun.hpp
meatworldgame/src/world/: event.cpp  event.hpp  gameui.cpp  world.cpp  world.hpp
meatworldgame/src/world/ui/: ingame-ui.cpp  ingame-ui.hpp  inventory.cpp  menu-ui.cpp  menu-ui.hpp  (+4 more)
src/ComponentSystems/: CMakeLists.txt  camera_cs.cpp  camera_cs.hpp  componentsystems.hpp  idk_model_CS.cpp  idk_model_CS.hpp  idk_transform_CS.h  physicsbody_cs.cpp  physicsbody_cs.hpp
src/ComponentSystems/playercontroller_cs/: characteranimator.cpp  characteranimator.hpp  playercontroller.cpp  playercontroller.hpp  playercontroller_cs.cpp  playercontroller_cs.hpp
src/ComponentSystems/terrain_cs/: terrain_cs.cpp  terrain_cs.hpp
src/Modules/: CMakeLists.txt
src/Modules/EditorUI/: idk_EditorUI.cpp  idk_EditorUI.hpp  idk_imgui-old.cpp
src/Modules/voxel/: idk_svoctree.hpp  idk_voxel.cpp  idk_voxel.hpp
(+172 files in other folders)
